New web added for

--- a/New_Image_tagging/css/main.css
+++ b/New_Image_tagging/css/main.css
@@ -1,4 +1,4 @@
-body{
+            body{
                 font-size:13px;
                 font-family:"Arial";
             }
@@ -12,17 +12,23 @@ body{
                 display:none;
             }
 
-            .center{
-                padding-left: 10%;
-                padding-top: 5%;
-            }
-
             .circle {
-               width: 8px;
-               height: 8px;
                -moz-border-radius: 8px;
                -webkit-border-radius: 8px;
                border-radius: 10px;
+               cursor: pointer;
+            }
+            .small{
+                width: 8px;
+                height: 8px;
+            }
+            .regular{
+                width: 12px;
+                height: 12px;
+            }
+            .big{
+                width: 16px;
+                height: 16px;
             }
             #red{
                 background: red;
@@ -41,16 +47,57 @@ body{
             #url_panel{
 
             }
+            .image-input > *{
+                padding: 5px;
+                margin: 10px;
+            }
+
+            .image-input{
+                padding: 10px;
+            }
+
+            .preview-image, .preview-image img{
+                float:left;
+                max-width:220px;
+                max-height:220px;
+            }
+
+            .border-preview-image button.left{
+                float: left;
+                vertical-align: center;
+                background: buttonshadow url("../image/prev.png") no-repeat scroll center center
+            }
+
+            .border-preview-image button.right{
+                float: right;
+                vertical-align: center;
+                background: buttonshadow url("../image/next.png") no-repeat scroll center center
+            }
+
+            .border-preview-image{
+                width:1040px;
+                display: flex;
+            }
+
+            .preview-image{
+                padding:10px;
+            }
+
+            .image-input > input[type="text"] {
+                border-radius: 10px;
+            }
+
+            .image-input > input[type="text"] {
+                border-radius: 10px;
+            }
+
             #form_panel{
                 float: left;
                 background:#eee;
                 border:5px solid #FFF;
                 outline:1px solid #eee;
-                left: 100px;
                 padding: 5px;
                 position: absolute;
-                top: 40px;
-                width: 310px;
                 z-index:2000;
             }
 
@@ -63,26 +110,21 @@ body{
 
             #image_panel{
                 float:left;
-                width:600px;
                 position:relative;
             }
+
             #image_panel img{
-                left:0;top:-102px;
-                max-width: 600px;
+                left:0;
                 overflow: hidden;
-
             }
-
 
             #form_panel .label{
                 float:left;
-                width:80px;
                 padding:5px;
             }
 
             #form_panel .field{
                 float:left;
-                width:200px;
                 padding:5px;
             }
 
@@ -96,12 +138,35 @@ body{
                 background:#eee;
             }
 
+            .preview-images {
+                height: 240px;
+                overflow: hidden;
+                width: 960px;
+                float: left;
+            }
 
-            input[type='button']{
+            .close{
+                position: absolute;
+                top: -20px;
+                right: -14px;
+                width: 25px;
+                height: 25px;
+                background: transparent url("../image/close.png") no-repeat center center;
+                -moz-border-radius: 8px;
+                -webkit-border-radius: 8px;
+                border-radius: 10px;
+            }
+
+            .button{
                 background: none repeat scroll 0 0 #2769C4;
                 border: 1px solid #CFCFCF;
                 color: #FFFFFF;
                 font-weight: bold;
-                height: 30px;
-                padding: 5px;
+                min-height: 30px;
+                margin: 10px;
+                text-align: 'center';
+            }
+
+            .text-center{
+                text-align: 'center';
             }
